--- a/theme/src/main/resources/META-INF/plugin.xml
+++ b/theme/src/main/resources/META-INF/plugin.xml
@@ -1,10 +1,10 @@
 <idea-plugin>
-	<id>com.github.adamwojszczyk.gruvboxLightSoftBlackTheme</id>
-	<name>Gruvbox Light Soft Black Theme</name>
+	<id>com.github.adamwojszczyk.gruvboxLightHardBlackTheme</id>
+	<name>Gruvbox Light Hard Black Theme</name>
 	<vendor email="adam.wojszczyk@gmail.com">Adam Wojszczyk</vendor>
 	<depends>com.intellij.modules.platform</depends>
 	<extensions defaultExtensionNs="com.intellij">
-		<themeProvider id="f20d8fb3-da86-46ac-8621-661b16f0d130" path="/Gruvbox_Light_Soft_Black.theme.json"/>
+		<themeProvider id="f20d8fb3-da86-46ac-8621-661b16f0d132" path="/theme.theme.json"/>
 	</extensions>
 	<actions/>
 </idea-plugin>
