--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -7,5 +7,6 @@ repositories {
 }
 
 dependencies {
-	compile 'com.fasterxml.jackson.core:jackson-databind:2.6.3'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.1'
+	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.12.1'
 }
