--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,5 +1,5 @@
 <idea-plugin>
-  <id>com.github.adamwojszczyk.gruvboxLightHardBlack</id>
+  <id>com.github.adamwojszczyk.gruvboxLightHardBlackTheme</id>
   <name>Gruvbox Light Hard Black Theme</name>
   <vendor email="adam.wojszczyk@gmail.com">Adam Wojszczyk</vendor>
   <depends>com.intellij.modules.platform</depends>
