--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ task generateIntelliJTheme(group: "theme") {
 	outputs.upToDateWhen { false }
 	doLast {
 		File file = file("$projectDir/src/main/resources/intellij.theme.json")
-		file.setText(new Json(new plugin.Plugin().theme()).text(), StandardCharsets.UTF_8.name())
+		file.setText(new Json(new plugin.Plugin().theme()).asString(), StandardCharsets.UTF_8.name())
 	}
 }
 
@@ -64,7 +64,7 @@ task generateIntelliJScheme(group: "theme") {
 	outputs.upToDateWhen { false }
 	doLast {
 		File file = file("$projectDir/src/main/resources/intellij.scheme.xml")
-		file.setText(new Xml(new plugin.Plugin().scheme()).text(), StandardCharsets.UTF_8.name())
+		file.setText(new Xml(new plugin.Plugin().scheme()).asString(), StandardCharsets.UTF_8.name())
 	}
 }
 
