Bind readonly background in scheme with ui non-project files background
- throw an exception when moved to far on color slider (with slider toString)
- add ToString reflective implementation from commons-lang3

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -9,4 +9,5 @@ repositories {
 dependencies {
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.1'
 	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.12.1'
+	implementation 'org.apache.commons:commons-lang3:3.11'
 }
