--- a/build.gradle
+++ b/build.gradle
@@ -26,11 +26,11 @@ intellij {
 
 patchPluginXml {
 	pluginDescription = """
-    	<h3>Gruvbox Light Hard Black Theme</h3>
+    	<h3>Eye-Friendly Sepia Theme</h3>
     	<br>
-    	<a href="https://github.com/adamwojszczyk/gruvbox-light-soft-black-theme">On GitHub</a> | <a href="https://github.com/adamwojszczyk/gruvbox-light-soft-black-theme/issues">Report an issue</a>
+    	<a href="https://github.com/adamwojszczyk/eye-friendly-sepia-theme">On GitHub</a> | <a href="https://github.com/adamwojszczyk/eye-friendly-sepia-theme/issues">Report an issue</a>
     	<br><br><br>
-    	<img src="https://raw.githubusercontent.com/adamwojszczyk/gruvbox-light-soft-black-theme/master/theme/screenshots/main-window.png" border="0" alt="Main window screenshot">
+    	<img src="https://raw.githubusercontent.com/adamwojszczyk/eye-friendly-sepia-theme/master/screenshots/main-window.png" border="0" alt="Main window screenshot">
 	"""
 	changeNotes = """
 		<i><b>0.0.1</b></i>
