--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,10 +1,10 @@
 <idea-plugin>
-  <id>com.github.adamwojszczyk.gruvboxLightHardBlackTheme</id>
-  <name>Gruvbox Light Hard Black Theme</name>
+  <id>com.github.adamwojszczyk.eyeFriendlySepiaTheme</id>
+  <name>Eye-Friendly Sepia Theme</name>
   <vendor email="adam.wojszczyk@gmail.com">Adam Wojszczyk</vendor>
   <depends>com.intellij.modules.platform</depends>
   <extensions defaultExtensionNs="com.intellij">
-    <themeProvider id="f20d8fb3-da86-46ac-8621-661b16f0d135" path="/intellij.theme.json"/>
+    <themeProvider id="be9ee20a-ea64-4eac-b420-29191a79191d" path="/intellij.theme.json"/>
   </extensions>
   <actions/>
 </idea-plugin>
