--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ intellij {
 }
 
 patchPluginXml {
-	untilBuild = '*.*'
+	untilBuild = '1000.*'
 	pluginDescription = """
     	<b><i>Light eye-friendly theme</i></b>
     	<br><br>
